# tsi

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
benches/: optimizer.rs
data/: engines.toml
docs/: commands.md  concept.md  documentation.md  engines.md  examples.md  getting-started.md  physics.md  roadmap.md  testing.md
docs/plan/: architecture.md  documentation.md  interface.md  libraries.md  roadmap.md  testing.md
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/engine/: database.rs  engine.rs  mod.rs  propellant.rs
src/optimizer/: analytical.rs  brute_force.rs  mod.rs  monte_carlo.rs  problem.rs  solution.rs  uncertainty.rs
src/output/: diagram.rs  mod.rs  terminal.rs
src/physics/: losses.rs  mod.rs  thrust.rs  tsiolkovsky.rs
src/stage/: mod.rs  rocket.rs  stage.rs
src/units/: fmt.rs  force.rs  isp.rs  mass.rs  mod.rs  ratio.rs  time.rs  velocity.rs
tests/: cli.rs  properties.rs  validation.rs
